@@ -15,6 +15,13 @@ This release series will make +mc+ ~moc~ ready for publishing on package archive
 - ~moc-focus-base-buffer~ local variable in MoC buffers makes it easier to use buffer locals from the base buffer even when invoking MoC multiple times and otherwise losing those states
 ** Changed 📈
 - ~moc-screenshot-path~ option was renamed to ~moc-screenshot-dir~
+- ~mc-focus~ playback now uses =:plist= style keyword args.  The new keys:
+  + =:invisibility-spec=
+  + =:overlays=
+  + =:beg=
+  + =:end=
+  + =:string= 🚧 Experimental!  Might change to =:text= or =:spans= depending on what happens with trimming
+  + =:highlights=
 ** Fixed 👷
 - ~moc-subtle-cursor-mode~ no longer blinks from non-motion commands
 * v0.3.0 A New Hope 🎄
